WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96582
new test fast/canvas/canvas-css-crazy.html fails on Mac
https://bugs.webkit.org/show_bug.cgi?id=96582
Summary
new test fast/canvas/canvas-css-crazy.html fails on Mac
Stephanie Lewis
Reported
2012-09-12 17:33:26 PDT
http://trac.webkit.org/changeset/128374
introduced fast/canvas/canvas-css-crazy.html which fails on the Mac.
http://build.webkit.org/results/Apple%20Lion%20Release%20WK1%20(Tests)/r128381%20(3497)/results.html
--- /Volumes/Data/slave/lion-release-tests-wk1/build/layout-test-results/fast/canvas/canvas-css-crazy-expected.txt +++ /Volumes/Data/slave/lion-release-tests-wk1/build/layout-test-results/fast/canvas/canvas-css-crazy-actual.txt @@ -1,2 +1,3 @@ +ALERT: FAIL! ctx wasn't null: undefined ALERT: PASS
Attachments
Patch
(1.43 KB, patch)
2012-09-12 22:36 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-09-12 17:33:43 PDT
<
rdar://problem/12289384
>
Adam Barth
Comment 2
2012-09-12 18:30:50 PDT
This is just a minor (long-standing) bug in the custom JSC bindings. /me will fix shortly.
Stephanie Lewis
Comment 3
2012-09-12 18:32:22 PDT
Thanks. Is there a bug on JSC bindings issue?
Adam Barth
Comment 4
2012-09-12 18:35:17 PDT
> Thanks. Is there a bug on JSC bindings issue?
Nope! This is it now. (I didn't know it existed until you told me that this test fails.)
Adam Barth
Comment 5
2012-09-12 22:36:46 PDT
Created
attachment 163778
[details]
Patch
Adam Barth
Comment 6
2012-09-12 23:38:08 PDT
***
Bug 96606
has been marked as a duplicate of this bug. ***
Csaba Osztrogonác
Comment 7
2012-09-12 23:55:03 PDT
Comment on
attachment 163778
[details]
Patch rs=me
WebKit Review Bot
Comment 8
2012-09-13 00:15:45 PDT
Comment on
attachment 163778
[details]
Patch Clearing flags on attachment: 163778 Committed
r128411
: <
http://trac.webkit.org/changeset/128411
>
WebKit Review Bot
Comment 9
2012-09-13 00:15:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug