new test fast/canvas/canvas-css-crazy.html fails on Mac https://bugs.webkit.org/show_bug.cgi?id=96582

Reviewed by Csaba Osztrogonác.

We represent 0 pointers with null, not undefined.

Test: fast/canvas/canvas-css-crazy.html

* bindings/js/JSCanvasRenderingContextCustom.cpp:
(WebCore::toJS):


Canonical link: https://commits.webkit.org/114497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128411 268f45cc-cd09-0410-ab3c-d52691b4dbfc